[package]
name = "rocrate-indexer"
version = "0.1.0"
edition = "2024"

[lib]
name = "rocrate_indexer"
path = "src/lib.rs"

[[bin]]
name = "rocrate-idx"
path = "src/bin/cli.rs"

[[bin]]
name = "rocrate-server"
path = "src/bin/server.rs"

[dependencies]
ro-crate-rs = "0.4"
tantivy = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

# Web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.7", features = ["json", "multipart"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors"] }
